--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googleapis/sheets": "^9.3.1",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@types/node": "^20",
